--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,9 +21,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
+            <!--<li class="nav-item">-->
+              <!--<a class="nav-link" href="#">Services</a>-->
+            <!--</li>-->
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
